# StellarisWiki

./: .gitignore  README.md  all_pages.md  analyze_wiki_pages.py  config.py  config.yaml  environment.yml  fetch_and_parse.py  fetch_specific_pages.py  html_to_markdown.py  pages_to_fetch.md  parser.py  pyproject.toml  requirements.txt  scraper.py  stellaris_mcp_server.py  stellariswiki.py  template_resolver.py
.github/workflows/: pages.yml  release.yml
config/: config.yaml
docs/: parsing_options.md
output/: all_pages.md  index.html  wiki_analysis.html  wiki_analysis.md
output/pages/: AI_personalities.md  AI_players.md  Achievements.md  Anomaly.md  Archaeological_site.md  Ascension_perks.md  Astral_rift.md  Astral_threads.md  Beginner's_guide.md  Biological_traits.md  Buildings.md  Caravaneers.md  Celestial_object.md  Civics.md  Collection.md  Colonization.md  Commander_traits.md  Common_leader_traits.md  Console_commands.md  Contingency.md  Core_components.md  Corporate_civics.md  Council.md  Crisis.md  Crisis_empire.md  Designation.md  Diplomacy.md  Discovery.md  Distant_Stars_projects.md  Districts.md  Easter_eggs.md  Edicts.md  Effects.md  Empire.md  Empire_modifiers.md  Enclaves.md  Engineering_research.md  Environmental_effects.md  Ethics.md  Events.md  (+68 more)
src/: __init__.py  analyzer.py  cli.py  config.py  converter.py  fetcher.py  mcp_server.py
src/templates/: category_filter.html  dashboard.html  disambig_section.html  dlc_section.html  fetched_table.html  footer.html  game_content.html  modals.html  modding_section.html  mods_section.html  nav.html  (+6 more)
